backend/grammar/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    OBJECT

Grammar

Rule 0     S' -> start
Rule 1     start -> block
Rule 2     block -> block instruction
Rule 3     block -> instruction
Rule 4     instruction -> declaration
Rule 5     instruction -> declaration_array
Rule 6     instruction -> assignment
Rule 7     instruction -> if
Rule 8     instruction -> switch
Rule 9     instruction -> while
Rule 10    instruction -> for
Rule 11    instruction -> function
Rule 12    instruction -> methods SEMICOLON
Rule 13    instruction -> call_function SEMICOLON
Rule 14    instruction -> break
Rule 15    instruction -> continue
Rule 16    instruction -> return
Rule 17    instruction -> print
Rule 18    declaration -> symbol_type ID COLON data_type EQUAL expression SEMICOLON
Rule 19    declaration -> symbol_type ID COLON data_type SEMICOLON
Rule 20    declaration -> symbol_type ID EQUAL expression SEMICOLON
Rule 21    assignment -> ID EQUAL expression SEMICOLON
Rule 22    assignment -> ID ADITION expression SEMICOLON
Rule 23    assignment -> ID SUBTRACTION expression SEMICOLON
Rule 24    expression -> expression TERNARY expression COLON expression
Rule 25    if -> IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 26    if -> IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 27    if -> IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list
Rule 28    if -> IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 29    else_if_list -> else_if_list else_if
Rule 30    else_if_list -> else_if
Rule 31    else_if -> ELSE IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 32    switch -> SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
Rule 33    cases -> cases case
Rule 34    cases -> case
Rule 35    case -> CASE expression COLON block
Rule 36    case -> DEFAULT COLON block
Rule 37    while -> WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 38    for -> FOR LEFT_PARENTHESIS declaration expression SEMICOLON expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 39    for -> FOR LEFT_PARENTHESIS symbol_type ID OF ID RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 40    break -> BREAK SEMICOLON
Rule 41    continue -> CONTINUE SEMICOLON
Rule 42    function -> FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 43    function -> FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 44    function -> FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 45    function -> FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
Rule 46    params -> params COMMA param
Rule 47    params -> param
Rule 48    param -> ID COLON data_type
Rule 49    param -> ID COLON data_type LEFT_SQ_BRACKET RIGHT_SQ_BRACKET
Rule 50    return -> RETURN expression SEMICOLON
Rule 51    return -> RETURN SEMICOLON
Rule 52    call_function -> ID LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
Rule 53    call_function -> ID LEFT_PARENTHESIS RIGHT_PARENTHESIS
Rule 54    methods -> methods PERIOD name_method LEFT_PARENTHESIS RIGHT_PARENTHESIS
Rule 55    methods -> methods PERIOD name_method expression
Rule 56    methods -> methods PERIOD name_method
Rule 57    methods -> access_array
Rule 58    methods -> value
Rule 59    name_method -> TOSTRING
Rule 60    name_method -> TOLOWERCASE
Rule 61    name_method -> TOUPPERCASE
Rule 62    name_method -> PUSH
Rule 63    name_method -> POP
Rule 64    name_method -> INDEXOF
Rule 65    name_method -> JOIN
Rule 66    name_method -> LENGTH
Rule 67    print -> CONSOLE PERIOD LOG LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS SEMICOLON
Rule 68    methods -> PARSEINT expression
Rule 69    methods -> PARSEFLOAT expression
Rule 70    methods -> TYPEOF expression
Rule 71    declaration_array -> symbol_type ID COLON data_type LEFT_SQ_BRACKET RIGHT_SQ_BRACKET EQUAL LEFT_SQ_BRACKET expression_list RIGHT_SQ_BRACKET SEMICOLON
Rule 72    assignment -> ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET EQUAL expression SEMICOLON
Rule 73    access_array -> ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET
Rule 74    expression_list -> expression_list COMMA expression
Rule 75    expression_list -> expression
Rule 76    expression -> expression_unary
Rule 77    expression -> expression_binary
Rule 78    expression -> expression_group
Rule 79    expression -> methods
Rule 80    expression -> call_function
Rule 81    expression_unary -> MINUS expression
Rule 82    expression_unary -> NOT expression
Rule 83    expression_unary -> expression INCREASE
Rule 84    expression_unary -> expression DECREASE
Rule 85    expression_binary -> arithmetic
Rule 86    expression_binary -> relational
Rule 87    expression_binary -> logical
Rule 88    arithmetic -> expression PLUS expression
Rule 89    arithmetic -> expression MINUS expression
Rule 90    arithmetic -> expression TIMES expression
Rule 91    arithmetic -> expression DIVIDE expression
Rule 92    arithmetic -> expression MODULUS expression
Rule 93    relational -> expression LESS expression
Rule 94    relational -> expression GREATER expression
Rule 95    relational -> expression EQUAL_TO expression
Rule 96    relational -> expression NOT_EQUAL_TO expression
Rule 97    relational -> expression LESS_EQUAL expression
Rule 98    relational -> expression GREATER_EQUAL expression
Rule 99    logical -> expression AND expression
Rule 100   logical -> expression OR expression
Rule 101   expression_group -> LEFT_PARENTHESIS expression RIGHT_PARENTHESIS
Rule 102   symbol_type -> VAR
Rule 103   symbol_type -> CONST
Rule 104   data_type -> NUMBER
Rule 105   data_type -> FLOAT
Rule 106   data_type -> STRING
Rule 107   data_type -> CHAR
Rule 108   data_type -> BOOLEAN
Rule 109   value -> INTEGER
Rule 110   value -> DECIMAL
Rule 111   value -> TEXT
Rule 112   value -> CHARACTER
Rule 113   value -> BOOL
Rule 114   value -> NULL
Rule 115   value -> ID

Terminals, with rules where they appear

ADITION              : 22
AND                  : 99
BOOL                 : 113
BOOLEAN              : 108
BREAK                : 40
CASE                 : 35
CHAR                 : 107
CHARACTER            : 112
COLON                : 18 19 24 35 36 43 45 48 49 71
COMMA                : 46 74
CONSOLE              : 67
CONST                : 103
CONTINUE             : 41
DECIMAL              : 110
DECREASE             : 84
DEFAULT              : 36
DIVIDE               : 91
ELSE                 : 26 28 31
EQUAL                : 18 20 21 71 72
EQUAL_TO             : 95
FLOAT                : 105
FOR                  : 38 39
FUNCTION             : 42 43 44 45
GREATER              : 94
GREATER_EQUAL        : 98
ID                   : 18 19 20 21 22 23 39 39 42 43 44 45 48 49 52 53 71 72 73 115
IF                   : 25 26 27 28 31
INCREASE             : 83
INDEXOF              : 64
INTEGER              : 109
JOIN                 : 65
LEFT_CURLY_BRACKET   : 25 26 26 27 28 28 31 32 37 38 39 42 43 44 45
LEFT_PARENTHESIS     : 25 26 27 28 31 32 37 38 39 42 43 44 45 52 53 54 67 101
LEFT_SQ_BRACKET      : 49 71 71 72 73
LENGTH               : 66
LESS                 : 93
LESS_EQUAL           : 97
LOG                  : 67
MINUS                : 81 89
MODULUS              : 92
NOT                  : 82
NOT_EQUAL_TO         : 96
NULL                 : 114
NUMBER               : 104
OBJECT               : 
OF                   : 39
OR                   : 100
PARSEFLOAT           : 69
PARSEINT             : 68
PERIOD               : 54 55 56 67
PLUS                 : 88
POP                  : 63
PUSH                 : 62
RETURN               : 50 51
RIGHT_CURLY_BRACKET  : 25 26 26 27 28 28 31 32 37 38 39 42 43 44 45
RIGHT_PARENTHESIS    : 25 26 27 28 31 32 37 38 39 42 43 44 45 52 53 54 67 101
RIGHT_SQ_BRACKET     : 49 71 71 72 73
SEMICOLON            : 12 13 18 19 20 21 22 23 38 40 41 50 51 67 71 72
STRING               : 106
SUBTRACTION          : 23
SWITCH               : 32
TERNARY              : 24
TEXT                 : 111
TIMES                : 90
TOLOWERCASE          : 60
TOSTRING             : 59
TOUPPERCASE          : 61
TYPEOF               : 70
VAR                  : 102
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

access_array         : 57
arithmetic           : 85
assignment           : 6
block                : 1 2 25 26 26 27 28 28 31 35 36 37 38 39 42 43 44 45
break                : 14
call_function        : 13 80
case                 : 33 34
cases                : 32 33
continue             : 15
data_type            : 18 19 43 45 48 49 71
declaration          : 4 38
declaration_array    : 5
else_if              : 29 30
else_if_list         : 27 28 29
expression           : 18 20 21 22 23 24 24 24 25 26 27 28 31 32 35 37 38 38 50 55 68 69 70 72 72 73 74 75 81 82 83 84 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101
expression_binary    : 77
expression_group     : 78
expression_list      : 52 67 71 74
expression_unary     : 76
for                  : 10
function             : 11
if                   : 7
instruction          : 2 3
logical              : 87
methods              : 12 54 55 56 79
name_method          : 54 55 56
param                : 46 47
params               : 44 45 46
print                : 17
relational           : 86
return               : 16
start                : 0
switch               : 8
symbol_type          : 18 19 20 39 71
value                : 58
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . block
    (2) block -> . block instruction
    (3) block -> . instruction
    (4) instruction -> . declaration
    (5) instruction -> . declaration_array
    (6) instruction -> . assignment
    (7) instruction -> . if
    (8) instruction -> . switch
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . function
    (12) instruction -> . methods SEMICOLON
    (13) instruction -> . call_function SEMICOLON
    (14) instruction -> . break
    (15) instruction -> . continue
    (16) instruction -> . return
    (17) instruction -> . print
    (18) declaration -> . symbol_type ID COLON data_type EQUAL expression SEMICOLON
    (19) declaration -> . symbol_type ID COLON data_type SEMICOLON
    (20) declaration -> . symbol_type ID EQUAL expression SEMICOLON
    (71) declaration_array -> . symbol_type ID COLON data_type LEFT_SQ_BRACKET RIGHT_SQ_BRACKET EQUAL LEFT_SQ_BRACKET expression_list RIGHT_SQ_BRACKET SEMICOLON
    (21) assignment -> . ID EQUAL expression SEMICOLON
    (22) assignment -> . ID ADITION expression SEMICOLON
    (23) assignment -> . ID SUBTRACTION expression SEMICOLON
    (72) assignment -> . ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET EQUAL expression SEMICOLON
    (25) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (26) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (27) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list
    (28) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (32) switch -> . SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
    (37) while -> . WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (38) for -> . FOR LEFT_PARENTHESIS declaration expression SEMICOLON expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (39) for -> . FOR LEFT_PARENTHESIS symbol_type ID OF ID RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (42) function -> . FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (43) function -> . FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (44) function -> . FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (45) function -> . FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (54) methods -> . methods PERIOD name_method LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (55) methods -> . methods PERIOD name_method expression
    (56) methods -> . methods PERIOD name_method
    (57) methods -> . access_array
    (58) methods -> . value
    (68) methods -> . PARSEINT expression
    (69) methods -> . PARSEFLOAT expression
    (70) methods -> . TYPEOF expression
    (52) call_function -> . ID LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
    (53) call_function -> . ID LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (40) break -> . BREAK SEMICOLON
    (41) continue -> . CONTINUE SEMICOLON
    (50) return -> . RETURN expression SEMICOLON
    (51) return -> . RETURN SEMICOLON
    (67) print -> . CONSOLE PERIOD LOG LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS SEMICOLON
    (102) symbol_type -> . VAR
    (103) symbol_type -> . CONST
    (73) access_array -> . ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET
    (109) value -> . INTEGER
    (110) value -> . DECIMAL
    (111) value -> . TEXT
    (112) value -> . CHARACTER
    (113) value -> . BOOL
    (114) value -> . NULL
    (115) value -> . ID

    ID              shift and go to state 19
    IF              shift and go to state 20
    SWITCH          shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    FUNCTION        shift and go to state 24
    PARSEINT        shift and go to state 27
    PARSEFLOAT      shift and go to state 28
    TYPEOF          shift and go to state 29
    BREAK           shift and go to state 30
    CONTINUE        shift and go to state 31
    RETURN          shift and go to state 32
    CONSOLE         shift and go to state 33
    VAR             shift and go to state 34
    CONST           shift and go to state 35
    INTEGER         shift and go to state 36
    DECIMAL         shift and go to state 37
    TEXT            shift and go to state 38
    CHARACTER       shift and go to state 39
    BOOL            shift and go to state 40
    NULL            shift and go to state 41

    start                          shift and go to state 1
    block                          shift and go to state 2
    instruction                    shift and go to state 3
    declaration                    shift and go to state 4
    declaration_array              shift and go to state 5
    assignment                     shift and go to state 6
    if                             shift and go to state 7
    switch                         shift and go to state 8
    while                          shift and go to state 9
    for                            shift and go to state 10
    function                       shift and go to state 11
    methods                        shift and go to state 12
    call_function                  shift and go to state 13
    break                          shift and go to state 14
    continue                       shift and go to state 15
    return                         shift and go to state 16
    print                          shift and go to state 17
    symbol_type                    shift and go to state 18
    access_array                   shift and go to state 25
    value                          shift and go to state 26

state 1

    (0) S' -> start .



state 2

    (1) start -> block .
    (2) block -> block . instruction
    (4) instruction -> . declaration
    (5) instruction -> . declaration_array
    (6) instruction -> . assignment
    (7) instruction -> . if
    (8) instruction -> . switch
    (9) instruction -> . while
    (10) instruction -> . for
    (11) instruction -> . function
    (12) instruction -> . methods SEMICOLON
    (13) instruction -> . call_function SEMICOLON
    (14) instruction -> . break
    (15) instruction -> . continue
    (16) instruction -> . return
    (17) instruction -> . print
    (18) declaration -> . symbol_type ID COLON data_type EQUAL expression SEMICOLON
    (19) declaration -> . symbol_type ID COLON data_type SEMICOLON
    (20) declaration -> . symbol_type ID EQUAL expression SEMICOLON
    (71) declaration_array -> . symbol_type ID COLON data_type LEFT_SQ_BRACKET RIGHT_SQ_BRACKET EQUAL LEFT_SQ_BRACKET expression_list RIGHT_SQ_BRACKET SEMICOLON
    (21) assignment -> . ID EQUAL expression SEMICOLON
    (22) assignment -> . ID ADITION expression SEMICOLON
    (23) assignment -> . ID SUBTRACTION expression SEMICOLON
    (72) assignment -> . ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET EQUAL expression SEMICOLON
    (25) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (26) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (27) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list
    (28) if -> . IF LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET else_if_list ELSE LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (32) switch -> . SWITCH LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET cases RIGHT_CURLY_BRACKET
    (37) while -> . WHILE LEFT_PARENTHESIS expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (38) for -> . FOR LEFT_PARENTHESIS declaration expression SEMICOLON expression RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (39) for -> . FOR LEFT_PARENTHESIS symbol_type ID OF ID RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (42) function -> . FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (43) function -> . FUNCTION ID LEFT_PARENTHESIS RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (44) function -> . FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (45) function -> . FUNCTION ID LEFT_PARENTHESIS params RIGHT_PARENTHESIS COLON data_type LEFT_CURLY_BRACKET block RIGHT_CURLY_BRACKET
    (54) methods -> . methods PERIOD name_method LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (55) methods -> . methods PERIOD name_method expression
    (56) methods -> . methods PERIOD name_method
    (57) methods -> . access_array
    (58) methods -> . value
    (68) methods -> . PARSEINT expression
    (69) methods -> . PARSEFLOAT expression
    (70) methods -> . TYPEOF expression
    (52) call_function -> . ID LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS
    (53) call_function -> . ID LEFT_PARENTHESIS RIGHT_PARENTHESIS
    (40) break -> . BREAK SEMICOLON
    (41) continue -> . CONTINUE SEMICOLON
    (50) return -> . RETURN expression SEMICOLON
    (51) return -> . RETURN SEMICOLON
    (67) print -> . CONSOLE PERIOD LOG LEFT_PARENTHESIS expression_list RIGHT_PARENTHESIS SEMICOLON
    (102) symbol_type -> . VAR
    (103) symbol_type -> . CONST
    (73) access_array -> . ID LEFT_SQ_BRACKET expression RIGHT_SQ_BRACKET
    (109) value -> . INTEGER
    (110) value -> . DECIMAL
    (111) value -> . TEXT
    (112) value -> . CHARACTER
    (113) value -> . BOOL
    (114) value -> . NULL
    (115) value -> . ID

    $end            reduce using rule 1 (start -> block .)
    ID              shift and go to state 19
    IF              shift and go to state 20
    SWITCH          shift and go to state 21
    WHILE           shift and go to state 22
    FOR             shift and go to state 23
    FUNCTION        shift and go to state 24
    PARSEINT        shift and go to state 27
    PARSEFLOAT      shift and go to state 28
    TYPEOF          shift and go to state 29
    BREAK           shift and go to state 30
    CONTINUE        shift and go to state 31
    RETURN          shift and go to state 32
    CONSOLE         shift and go to state 33
    VAR             shift and go to state 34
    CONST           shift and go to state 35
    INTEGER         shift and go to state 36
    DECIMAL         shift and go to state 37
    TEXT            shift and go to state 38
    CHARACTER       shift and go to state 39
    BOOL            shift and go to state 40
    NULL            shift and go to state 41

    instruction                    shift and go to state 42
    declaration                    shift and go to state 4
    declaration_array              shift and go to state 5
    assignment                     shift and go to state 6
    if                             shift and go to state 7
    switch                         shift and go to state 8
    while                          shift and go to state 9
    for                            shift and go to state 10
    function                       shift and go to state 11
    methods                        shift and go to state 12
    call_function                  shift and go to state 13
    break                          shift and go to state 14
    continue                       shift and go to state 15
    return                         shift and go to state 16
    print                          shift and go to state 17
    symbol_type                    shift and go to state 18
    access_array                   shift and go to state 25
    value                          shift and go to state 26

state 3

    (3) block -> instruction .

    ID              reduce using rule 3 (block -> instruction .)
    IF              reduce using rule 3 (block -> instruction .)
    SWITCH          reduce using rule 3 (block -> instruction .)
    WHILE           reduce using rule 3 (block -> instruction .)
    FOR             reduce using rule 3 (block -> instruction .)
    FUNCTION        reduce using rule 3 (block -> instruction .)
    PARSEINT        reduce using rule 3 (block -> instruction .)
    PARSEFLOAT      reduce using rule 3 (block -> instruction .)
    TYPEOF          reduce using rule 3 (block -> instruction .)
    BREAK           reduce using rule 3 (block -> instruction .)
    CONTINUE        reduce using rule 3 (block -> instruction .)
    RETURN          reduce using rule 3 (block -> instruction .)
    CONSOLE         reduce using rule 3 (block -> instruction .)
    VAR             reduce using rule 3 (block -> instruction .)
    CONST           reduce using rule 3 (block -> instruction .)
    INTEGER         reduce using rule 3 (block -> instruction .)
    DECIMAL         reduce using rule 3 (block -> instruction .)
    TEXT            reduce using rule 3 (block -> instruction .)
    CHARACTER       reduce using rule 3 (block -> instruction .)
    BOOL            reduce using rule 3 (block -> instruction .)
    NULL            reduce using rule 3 (block -> instruction .)
    $end            reduce using rule 3 (block -> instruction .)
    RIGHT_CURLY_BRACKET reduce using rule 3 (block -> instruction .)
    CASE            reduce using rule 3 (block -> instruction .)
    DEFAULT         reduce using rule 3 (block -> instruction .)


state 4

    (4) instruction -> declaration .

    ID              reduce using rule 4 (instruction -> declaration .)
    IF              reduce using rule 4 (instruction -> declaration .)
    SWITCH          reduce using rule 4 (instruction -> declaration .)
    WHILE           reduce using rule 4 (instruction -> declaration .)
    FOR             reduce using rule 4 (instruction -> declaration .)
    FUNCTION        reduce using rule 4 (instruction -> declaration .)
    PARSEINT        reduce using rule 4 (instruction -> declaration .)
    PARSEFLOAT      reduce using rule 4 (instruction -> declaration .)
    TYPEOF          reduce using rule 4 (instruction -> declaration .)
    BREAK           reduce using rule 4 (instruction -> declaration .)
    CONTINUE        reduce using rule 4 (instruction -> declaration .)
    RETURN          reduce using rule 4 (instruction -> declaration .)
    CONSOLE         reduce using rule 4 (instruction -> declaration .)
    VAR             reduce using rule 4 (instruction -> declaration .)
    CONST           reduce using rule 4 (instruction -> declaration .)
    INTEGER         reduce using rule 4 (instruction -> declaration .)
    DECIMAL         reduce using rule 4 (instruction -> declaration .)
    TEXT            reduce using rule 4 (instruction -> declaration .)
    CHARACTER       reduce using rule 4 (instruction -> declaration .)
    BOOL            reduce using rule 4 (instruction -> declaration .)
    NULL            reduce using rule 4 (instruction -> declaration .)
    $end            reduce using rule 4 (instruction -> declaration .)
    RIGHT_CURLY_BRACKET reduce using rule 4 (instruction -> declaration .)
    CASE            reduce using rule 4 (instruction -> declaration .)
    DEFAULT         reduce using rule 4 (instruction -> declaration .)


state 5

    (5) instruction -> declaration_array .

    ID              reduce using rule 5 (instruction -> declaration_array .)
    IF              reduce using rule 5 (instruction -> declaration_array .)
    SWITCH          reduce using rule 5 (instruction -> declaration_array .)
    WHILE           reduce using rule 5 (instruction -> declaration_array .)
    FOR             reduce using rule 5 (instruction -> declaration_array .)
    FUNCTION        reduce using rule 5 (instruction -> declaration_array .)
    PARSEINT        reduce using rule 5 (instruction -> declaration_array .)
    PARSEFLOAT      reduce using rule 5 (instruction -> declaration_array .)
    TYPEOF          reduce using rule 5 (instruction -> declaration_array .)
    BREAK           reduce using rule 5 (instruction -> declaration_array .)
    CONTINUE        reduce using rule 5 (instruction -> declaration_array .)
    RETURN          reduce using rule 5 (instruction -> declaration_array .)
    CONSOLE         reduce using rule 5 (instruction -> declaration_array .)
    VAR             reduce using rule 5 (instruction -> declaration_array .)
    CONST           reduce using rule 5 (instruction -> declaration_array .)
    INTEGER         reduce using rule 5 (instruction -> declaration_array .)
    DECIMAL         reduce using rule 5 (instruction -> declaration_array .)
    TEXT            reduce using rule 5 (instruction -> declaration_array .)
    CHARACTER       reduce using rule 5 (instruction -> declaration_array .)
    BOOL            reduce using rule 5 (instruction -> declaration_array .)
    NULL            reduce using rule 5 (instruction -> declaration_array .)
    $end            reduce using rule 5 (instruction -> declaration_array .)
    RIGHT_CURLY_BRACKET reduce using rule 5 (instruction -> declaration_array .)
    CASE            reduce using rule 5 (instruction -> declaration_array .)
    DEFAULT         reduce using rule 5 (instruction -> declaration_array .)


state 6

    (6) instruction -> assignment .

    ID              reduce using rule 6 (instruction -> assignment .)
    IF              reduce using rule 6 (instruction -> assignment .)
    SWITCH          reduce using rule 6 (instruction -> assignment .)
    WHILE           reduce using rule 6 (instruction -> assignment .)
    FOR             reduce using rule 6 (instruction -> assignment .)
    FUNCTION        reduce using rule 6 (instruction -> assignment .)
    PARSEINT        reduce using rule 6 (instruction -> assignment .)
    PARSEFLOAT      reduce using rule 6 (instruction -> assignment .)
    TYPEOF          reduce using rule 6 (instruction -> assignment .)
    BREAK           reduce using rule 6 (instruction -> assignment .)
    CONTINUE        reduce using rule 6 (instruction -> assignment .)
    RETURN          reduce using rule 6 (instruction -> assignment .)
    CONSOLE         reduce using rule 6 (instruction -> assignment .)
    VAR             reduce using rule 6 (instruction -> assignment .)
    CONST           reduce using rule 6 (instruction -> assignment .)
    INTEGER         reduce using rule 6 (instruction -> assignment .)
    DECIMAL         reduce using rule 6 (instruction -> assignment .)
    TEXT            reduce using rule 6 (instruction -> assignment .)
    CHARACTER       reduce using rule 6 (instruction -> assignment .)
    BOOL            reduce using rule 6 (instruction -> assignment .)
    NULL            reduce using rule 6 (instruction -> assignment .)
    $end            reduce using rule 6 (instruction -> assignment .)
    RIGHT_CURLY_BRACKET reduce using rule 6 (instruction -> assignment .)
    CASE            reduce using rule 6 (instruction -> assignment .)
    DEFAULT         reduce using rule 6 (instruction -> assignment .)


state 7

    (7) instruction -> if .

    ID              reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    SWITCH          reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    FUNCTION        reduce using rule 7 (instruction -> if .)
    PARSEINT        reduce using rule 7 (instruction -> if .)
    PARSEFLOAT      reduce using rule 7 (instruction -> if .)
    TYPEOF          reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    CONSOLE         reduce using rule 7 (instruction -> if .)
    VAR             reduce using rule 7 (instruction -> if .)
    CONST           reduce using rule 7 (instruction -> if .)
    INTEGER         reduce using rule 7 (instruction -> if .)
    DECIMAL         reduce using rule 7 (instruction -> if .)
    TEXT            reduce using rule 7 (instruction -> if .)
    CHARACTER       reduce using rule 7 (instruction -> if .)
    BOOL            reduce using rule 7 (instruction -> if .)
    NULL            reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    RIGHT_CURLY_BRACKET reduce using rule 7 (instruction -> if .)
    CASE            reduce using rule 7 (instruction -> if .)
    DEFAULT         reduce using rule 7 (instruction -> if .)


state 8

    (8) instruction -> switch .

    ID              reduce using rule 8 (instruction -> switch .)
    IF              reduce using rule 8 (instruction -> switch .)
    SWITCH          reduce using rule 8 (instruction -> switch .)
    WHILE           reduce using rule 8 (instruction -> switch .)
    FOR             reduce using rule 8 (instruction -> switch .)
    FUNCTION        reduce using rule 8 (instruction -> switch .)
    PARSEINT        reduce using rule 8 (instruction -> switch .)
    PARSEFLOAT      reduce using rule 8 (instruction -> switch .)
    TYPEOF          reduce using rule 8 (instruction -> switch .)
    BREAK           reduce using rule 8 (instruction -> switch .)
    CONTINUE        reduce using rule 8 (instruction -> switch .)
    RETURN          reduce using rule 8 (instruction -> switch .)
    CONSOLE         reduce using rule 8 (instruction -> switch .)
    VAR             reduce using rule 8 (instruction -> switch .)
    CONST           reduce using rule 8 (instruction -> switch .)
    INTEGER         reduce using rule 8 (instruction -> switch .)
    DECIMAL         reduce using rule 8 (instruction -> switch .)
    TEXT            reduce using rule 8 (instruction -> switch .)
    CHARACTER       reduce using rule 8 (instruction -> switch .)
    BOOL            reduce using rule 8 (instruction -> switch .)
    NULL            reduce using rule 8 (instruction -> switch .)
    $end            reduce using rule 8 (instruction -> switch .)
    RIGHT_CURLY_BRACKET reduce using rule 8 (instruction -> switch .)
    CASE            reduce using rule 8 (instruction -> switch .)
    DEFAULT         reduce using rule 8 (instruction -> switch .)


state 9

    (9) instruction -> while .
